<resources>
    <string name="AM">AM</string>
    <string name="Address1">Address1:</string>
    <string name="Area">Area:</string>
    <string name="Import">Import</string>
    <string name="Order_id">Order Id:</string>
    <string name="PM">PM</string>
    <string name="Phone">Phone:</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About App</string>
    <string name="action_settings">Settings</string>
    <string name="add_address">ADD ADDRESS</string>
    <string name="add_more_parcel">Add more parcel</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>
    <string name="address">Address</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="address_book">Address Book</string>
    <string name="address_name">Address Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="apartment">Apartment/Office Name</string>
    <string name="app_name">Target Logistics</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ar">ع</string>
    <string name="arabic">عربى</string>
    <string name="are_you_sure_want_to_cancel_order">Are you sure want to cancel order</string>
    <string name="are_you_sure_want_to_logout">Are you sure,you want to logout from app</string>
    <string name="area">Area</string>
    <string name="area_mismatch">Area mismatch</string>
    <string name="area_star">Area*</string>
    <string name="back">Back</string>
    <string name="block">Block</string>
    <string name="bold_font">fonts/TitilliumWeb-Bold.ttf</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="call_center">Call center</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="change_pwd">Change Password</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="city">City</string>
    <string name="city_star">City*</string>
    <string name="close">Close</string>
    <string name="cm_unit">Cm</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="completed">Completed</string>
    <string name="confirm_address">Confirm Address</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="contact_us">Contact Us</string>
    <string name="copied">Copied</string>
    <string name="cost_validation">Please enter cost value</string>
    <string name="cost_value">Cost Value</string>
    <string name="cost_value_star">Cost Value*</string>
    <string name="country">Country</string>
    <string name="country_mismatch">Country mismatch</string>
    <string name="country_star">Country*</string>
    <string name="date">Pickup Date:</string>
    <string name="default_web_client_id">79140729944-jv6f8282hpgudajf33l5oltet31aco8j.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation_message">Are you sure want to delete this item ?</string>
    <string name="delivery">Delivery</string>
    <string name="deliveryAddress">Delivery Address</string>
    <string name="delivery_address">DELIVERY\nADDRESS</string>
    <string name="delivery_history">Delivery history</string>
    <string name="delivery_space">D e l i v e r y</string>
    <string name="email_address">Email address</string>
    <string name="full_Name">Full name:</string>
    <string name="full_name">Full Name</string>
    <string name="height">Height(Cm)</string>
    <string name="length">Length(Cm)</string>
    <string name="no_internet_available">Please check your internet connection and try again</string>
    <string name="order_date">Order Date:</string>
    <string name="order_info">Order Info</string>
    <string name="parcelInfo">Parcel Info</string>
    <string name="parcel_detail_description">Parcel Details Description</string>
    <string name="parcel_type">Parcel Type</string>
    <string name="phone">Phone</string>
    <string name="pickupAddress">Pickup Address</string>
    <string name="please_enter_your_register_email_address_below_to_send_reset_password_link">Please enter your register email address below to send reset password link</string>
    <string name="quantity">Quantity</string>
    <string name="shipment_id">Track Number:</string>
    <string name="shipment_info">Shipment Info</string>
    <string name="status">Status:</string>
    <string name="submit">Submit</string>
    <string name="total_cost">Total Cost:</string>
    <string name="total_weight">Total Weight:</string>
    <string name="track_driver">Track Driver</string>
    <string name="try_again">Try Again</string>
    <string name="vehicle_type">Vehicle Type:</string>
    <string name="weight_of_the_parcel">Weight of the Parcel(KG)</string>
    <string name="width">Width(Cm)</string>
</resources>