<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/activity_forgot_password_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <View style="@style/topViewStyle"/>
    <RelativeLayout android:id="@+id/rel_pwd" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="12dp">
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="center" android:id="@+id/tvTxt" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="4dp" android:text="@string/please_enter_your_register_email_address_below_to_send_reset_password_link"/>
        <android.support.design.widget.TextInputLayout android:textColorHint="@color/hint_grey" android:id="@+id/tILEmail" android:paddingTop="8dp" android:paddingBottom="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/tvTxt" android:textAlignment="viewStart" app:hintTextAppearance="@style/TextAppearance.AppCompat">
            <EditText android:id="@+id/edtEmail" android:hint="@string/email_address" android:inputType="textEmailAddress" android:imeOptions="actionNext" android:textCursorDrawable="@null" style="@style/AddressEditTextStyle"/>
        </android.support.design.widget.TextInputLayout>
        <View android:layout_below="@+id/tILEmail" style="@style/edtViewStyle"/>
    </RelativeLayout>
    <Button android:textAppearance="@style/TextAppearance.AppCompat.Headline" android:gravity="center" android:id="@+id/btnSubmit" android:background="@color/colorRed" android:padding="16dp" android:text="@string/submit" android:layout_alignParentBottom="true" android:onClick="onClick" android:textAllCaps="true" android:textAlignment="center" style="@style/TextStyle"/>
</RelativeLayout>
